--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -8,3 +8,9 @@
     justify-content: space-between;
     gap: 8px;
 }
+.gamecontainer{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+}
