--- a/src/components/cards/gameCard/gameCard.module.css
+++ b/src/components/cards/gameCard/gameCard.module.css
@@ -7,6 +7,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 .title{
     font-size: 20px;
@@ -28,4 +29,17 @@
 .price{
     color: #BEEB14;
     font-size: 32px;
+}
+@media (max-width: 700px){
+    .image{
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+    }
+    .gamecard{
+        flex-direction: column;
+    }
+    .pricing{
+        flex-direction: column;
+    }
 }
